public enum Categoria {
    ALIMENTO,
    MUEBLE,
    VESTIMENTA,
    ABRIGO,
    DESCANSO
}
