public enum EstadoBien {
    NUEVO,
    USADO
}
