public enum Periodo {
  SEMANAL,
  MENSUAL
}
