package notificacion;

public enum EstadoNotificacion {
    PENDIENTE,
    COMPLETADA,
    FALLIDA
}